# generativity

./: .gitignore  .travis.yml  Cargo.msrv.toml  Cargo.toml  LICENSE-MIT  README.md  bless.nu  bors.toml
.github/workflows/: ci.yaml  publish.yaml  release.yml
src/: lib.rs
tests/ui/: crossed_streams-expr.rs  crossed_streams-expr.stderr  crossed_streams.stderr  diverging_fn.rs  diverging_fn.stderr  diverging_fn_cursed.rs  diverging_fn_cursed.stderr  is_trans_compatible.rs  is_trans_compatible.stderr  issue_15_panic_dropck.rs  issue_15_panic_dropck.stderr  unify_let_guards.rs  unify_let_guards.stderr  unify_temp_guards.rs  unify_temp_guards.stderr
tests/ui/fail/: crossed_streams.rs  crossed_streams.stderr
tests/ui/pass/: is_trans_compatible.rs  is_trans_compatible.stderr
