[package]
name = "generativity"
version = "1.1.0"
edition = "2018"
rust-version = "1.55.0"

description = "Generation of unique invariant lifetimes"
repository = "https://github.com/CAD97/generativity"
keywords = ["generativity", "no-std", "unsafe-tools"]
categories = ["no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"

[dev-dependencies]
trybuild = "1.0.85"
